network.tf
## Virtual network
resource "azurerm_virtual_network" "vnet-homework" {
  name                = "vnet"
  location            = azurerm_resource_group.rg-homework.location
  resource_group_name = azurerm_resource_group.rg-homework.name
  address_space       = ["10.0.0.0/16"]
}

#Subnet
resource "azurerm_subnet" "subnet-homework" {
  name                 = "example-subnet"
  resource_group_name  = azurerm_resource_group.rg-homework.name
  virtual_network_name = azurerm_virtual_network.vnet-homework.name
  address_prefixes     = ["10.0.1.0/24"]
}

#public ip
resource "azurerm_public_ip" "public-ip-homework" {
  name                = "publicip"
  resource_group_name = azurerm_resource_group.rg-homework.name
  location            = azurerm_resource_group.rg-homework.location
  allocation_method   = "Static"
}

#Network interface
resource "azurerm_network_interface" "network-interface-homework" {
  name                = "nic"
  location            = azurerm_resource_group.rg-homework.location
  resource_group_name = azurerm_resource_group.rg-homework.name

  ip_configuration {
    name                          = "nic-ip"
    subnet_id                     = azurerm_subnet.subnet-homework.id
    private_ip_address_allocation = "Dynamic"
    public_ip_address_id          = azurerm_public_ip.public-ip-homework.id
  }
}

#Connect firewall with the network interface
resource "azurerm_network_interface_security_group_association" "nic-firewall-homework" {
  network_interface_id      = azurerm_network_interface.network-interface-homework.id
  network_security_group_id = azurerm_network_security_group.firewall-homework.id
}
