firewall.tf
#Firewall
resource "azurerm_network_security_group" "firewall-homework" {
  name                = "nsg"
  location            = azurerm_resource_group.rg-homework.location
  resource_group_name = azurerm_resource_group.rg-homework.name

  #Allowing SSH
  security_rule {
    name                       = "SSH"
    priority                   = 100
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "22"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }

  #Allowing PORT
  security_rule {
    name                       = "web"
    priority                   = 1001
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "80"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }
}
